create unordered list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
     <header>
         <h1>Module 1 – Assignment 1</h1>
+        <nav>
+            <ul>
+                <li>Audi</li>
+                <li>BMW</li>
+                <li>Porsche</li>
+                <li>Maserati</li>
+                <li>Mercedes Benz</li>
+            </ul>
+        </nav>
     </header>
     
 </body>
