create main with h2 and p

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <h2>GitHub Practice</h2>
+        <p>This is in my master branch</p>
+    </main>
     
 </body>
 </html>
